--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Commit and Push to Protected Branch"
+name: "Commit and Push to Protected Branch - Allow Empty"
 description: "A Github Action that is able to push the pending changes of a codebase on a branch protected by pull request."
 author: "mail@fabriziocacicia.com"
 
